Header spacing fix
fix

--- a/src/global.scss
+++ b/src/global.scss
@@ -46,7 +46,9 @@ ion-toolbar {
 }
 
 body,
-ion-app {
+ion-app,
+.ion-page, 
+ion-content{
   padding-top: env(safe-area-inset-top);
   padding-bottom: env(safe-area-inset-bottom);
   padding-left: env(safe-area-inset-left);
